Fixed typo in Frameworks section.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </li>
                     <li>
                         <p class="skills-type">Frameworks</p>
-                        <p class="skills-details">NET, ASP.NET, WinForms, Microsoft Excel (macros).</p>
+                        <p class="skills-details">.NET, ASP.NET, WinForms, Microsoft Excel (macros).</p>
                     </li>
                     <li>
                         <p class="skills-type">Development Tools</p>
